j'ai finit les test de fonctionnaliter ça marche
